# fast-api-01

./: .env.example  .gitignore  LOGGER_SETUP.md  Makefile  README.md  app.db  pyproject.toml  run.py  setup_dev_env.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: CONFIG_TEST_COVERAGE.md  HTTPS_SETUP.md  ROUTES_QUICK_REF.md  ROUTING_INTEGRATION.md  SSL_QUICK_START.md  api-reference.md  async-examples.md  examples.md  getting-started.md  index.md  installation.md  logging.md  routing.md
src/app/: __init__.py  __main__.py  app.py
src/app/config/: __init__.py  auth_dependencies.py  correlation_id_middleware.py  dependencies.py  jwt_middleware.py  logger.py  logger_examples.py  routes.py  settings.py  ssl_generator.py
src/app/controller/: __init__.py
src/app/controller/v1/: base_controller.py  login_controller.py  post_controller.py
src/app/controller/v1/dto/: __init__.py  post_dto.py  user_dto.py
src/app/data/: __init__.py  database.py
src/app/data/v1/: __init__.py  base_repository.py  login_code_repository.py  post_repository.py  user_repository.py
src/app/data/v1/model/: __init__.py  login_code.py  post.py  user.py
src/app/security/: __init__.py  cors_config.py  jwt.py
src/app/service/: __init__.py  mail_service.py
src/app/service/v1/: base_service.py  login_code_service.py  post_service.py  user_service.py
src/fastapi_01/: App.py  Demo.py  DemoAsync.py  __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_app.py  test_auth_dependencies.py  test_base_repository.py  test_base_service.py  test_cors_config.py  test_demo_async.py  test_dependencies.py  test_jwt.py  test_jwt_middleware.py  test_logger.py  test_login_code_repository.py  test_login_code_service.py  test_login_controller.py  test_mail_service.py  test_main.py  test_post_controller.py  test_routes.py  test_settings.py  test_user_repository.py  test_user_service.py
